--- a/src/components/Slider/scaffolding/demo.hbs
+++ b/src/components/Slider/scaffolding/demo.hbs
@@ -2,21 +2,15 @@
 	<section>
 		<div class="row row--reducedWidth">
 			<div class="col" id="sliders">
-
-				{{!-- <x-slider id="slider" data-resources="[{paths: ['components/Slider/index.js']}]" selected="2">
+				<x-slider id="slider" data-resources="[{paths: ['components/Slider/index.js']}]" whatever="yeas" selected="1">
 					<x-slide>First</x-slide>
 					<x-slide>Second</x-slide>
 					<x-slide>Third</x-slide>
-				</x-slider> --}}
-
-				<wrapped-slider store="r">
-					<x-slider id="slider" data-resources="[{paths: ['components/Slider/index.js']}]" selected="1">
-						<x-slide>First</x-slide>
-						<x-slide>Second</x-slide>
-						<x-slide>Third</x-slide>
-					</x-slider>
-				</wrapped-slider>
+				</x-slider>
 			</div>
 		</div>
 	</section>
 </div>
+
+
+<home-select data-resources="[{paths: ['components/Slider/home.js']}]" whatever="sadf"></home-select>
