Errors are gone now

--- a/src/layouts/includes/htmlhead.scripts.hbs
+++ b/src/layouts/includes/htmlhead.scripts.hbs
@@ -8,7 +8,8 @@
 <!-- endbuild -->
 
 {{!-- DEV-Note: Add Custom Element ES5 Adapter if ES5 Web Components are used --}}
-<!-- script src="resources/js/vendor/custom-elements-es5-adapter.js"></script -->
+<script src="resources/js/vendor/webcomponents-loader.js"></script>
+<script src="resources/js/vendor/custom-elements-es5-adapter.js"></script>
 
 {{!-- DEV-Note: Site-specific configurations like CDN resource folder or current page ID --}}
 <script type="text/javascript">
