Add new template system

--- a/src/components/Slider/scaffolding/demo.hbs
+++ b/src/components/Slider/scaffolding/demo.hbs
@@ -2,7 +2,7 @@
 	<section>
 		<div class="row row--reducedWidth">
 			<div class="col" id="sliders">
-				<x-slider id="slider" data-resources="[{paths: ['components/Slider/index.js']}]" whatever="yeas" selected="1">
+				<x-slider id="slider" data-resources="[{paths: ['components/Slider/index.js']}]" selected="2">
 					<x-slide>First</x-slide>
 					<x-slide>Second</x-slide>
 					<x-slide>Third</x-slide>
@@ -11,6 +11,3 @@
 		</div>
 	</section>
 </div>
-
-
-<home-select data-resources="[{paths: ['components/Slider/home.js']}]" whatever="sadf"></home-select>
