--- a/src/layouts/includes/htmlhead.scripts.hbs
+++ b/src/layouts/includes/htmlhead.scripts.hbs
@@ -1,5 +1,7 @@
 {{!-- DEV-Note: Add optional preload links here. Paths must match script paths from /includes/scripts.hbs --}}
 <!--<link rel="preload" href="resources/js/scripts.all.min.js" as="script">-->
+<script src="resources/js/vendor/custom-elements-es5-adapter.js"></script>
+<script src="resources/js/vendor/webcomponents-loader.js"></script>
 
 {{!-- DEV-Note: All JavaScript at the bottom, except for Modernizr, configurations and necessary polyfills --}}
 <!-- build:js(.tmp) resources/js/scripts.head.all.min.js  -->
