Working on styling

--- a/src/components/Slider/Slider.styles.scss
+++ b/src/components/Slider/Slider.styles.scss
@@ -1,4 +1,11 @@
+x-slider {
+    display: inline-block;
+    background-color: orange;
+}
 :host {
     display: inline-block;
     background-color: orange;
+}
+body {
+    background-color: aqua;
 }
